--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -79,6 +79,7 @@ jobs:
       - name: Configure AWS credentials
         id: aws-creds
         if: ${{ env.AWS_ROLE_ARN != '' }}
+        continue-on-error: true
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
