--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -93,11 +93,22 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Compute build context
+        id: ctx
+        run: |
+          svc="${{ matrix.service }}"
+          if [ "$svc" = "search-service" ]; then
+            echo "CONTEXT=./backend/search-service" >> $GITHUB_ENV
+          else
+            echo "CONTEXT=./backend" >> $GITHUB_ENV
+          fi
+          echo "Using context: ${CONTEXT}"
+
       - name: Build and push ${{ matrix.service }}
         if: ${{ steps.aws-creds.outcome == 'success' }}
         uses: docker/build-push-action@v5
         with:
-          context: ./backend
+          context: ${{ env.CONTEXT }}
           file: ./backend/${{ matrix.service }}/Dockerfile
           platforms: linux/amd64
           push: true
@@ -109,10 +120,15 @@ jobs:
 
       - name: Local build without push (no AWS credentials)
         if: ${{ steps.aws-creds.outcome != 'success' }}
-        run: |
-          echo "⚠️  AWS credentials not available - building locally only"
-          docker build -f ./backend/${{ matrix.service }}/Dockerfile ./backend -t ${{ matrix.service }}:local
-          echo "✅ Local build complete for ${{ matrix.service }}"
+        uses: docker/build-push-action@v5
+        with:
+          context: ${{ env.CONTEXT }}
+          file: ./backend/${{ matrix.service }}/Dockerfile
+          platforms: linux/amd64
+          push: false
+          tags: ${{ matrix.service }}:local
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Verify image pushed
         if: ${{ steps.aws-creds.outcome == 'success' }}
