--- a/.github/workflows/test-aws-oidc.yml
+++ b/.github/workflows/test-aws-oidc.yml
@@ -31,6 +31,9 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ap-northeast-1
+          audience: sts.amazonaws.com
+          role-session-name: gha-oidc-${{ github.run_id }}
+          role-skip-session-tagging: true
 
       - name: Verify AWS credentials
         run: |
