--- a/.github/workflows/test-aws-oidc.yml
+++ b/.github/workflows/test-aws-oidc.yml
@@ -16,6 +16,27 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Debug OIDC: fetch token and try STS manually
+        shell: bash
+        continue-on-error: true
+        env:
+          ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
+        run: |
+          echo "::group::OIDC Debug"
+          echo "Requesting OIDC token..."
+          TOKEN=$(curl -sS -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=sts.amazonaws.com" | jq -r .value)
+          if [ -z "$TOKEN" ] || [ "$TOKEN" = "null" ]; then
+            echo "Failed to fetch OIDC token"; exit 0
+          fi
+          echo "Token acquired (len=${#TOKEN})"
+          echo "Trying STS AssumeRoleWithWebIdentity..."
+          aws sts assume-role-with-web-identity \
+            --role-arn "$ROLE_ARN" \
+            --role-session-name debug-oidc \
+            --web-identity-token "$TOKEN" \
+            --duration-seconds 3600 || true
+          echo "::endgroup::"
+
       - name: Print environment
         run: |
           echo "::group::Environment"
