--- a/.github/workflows/test-aws-oidc.yml
+++ b/.github/workflows/test-aws-oidc.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-to-assume: arn:aws:iam::025434362120:role/github-actions-role
           aws-region: ap-northeast-1
           audience: sts.amazonaws.com
           role-session-name: gha-oidc-${{ github.run_id }}
