fix(docker): switch build context to repo root and adjust service Dockerfiles to copy from backend paths

--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -93,7 +93,7 @@ jobs:
           if [ "$svc" = "search-service" ]; then
             echo "CONTEXT=./backend/search-service" >> $GITHUB_ENV
           else
-            echo "CONTEXT=./backend" >> $GITHUB_ENV
+            echo "CONTEXT=." >> $GITHUB_ENV
           fi
           echo "Using context: ${CONTEXT}"
 
