--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -13,10 +13,10 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-# Copy workspace files
-COPY Cargo.toml Cargo.lock ./
-COPY auth-service ./auth-service
-COPY libs ./libs
+# Copy workspace files (build context is repo root)
+COPY backend/Cargo.toml backend/Cargo.lock ./
+COPY backend/auth-service ./auth-service
+COPY backend/libs ./libs
 
 # Build auth-service
 RUN cargo build --release --package auth-service
