--- a/.dockerignore
+++ b/.dockerignore
@@ -55,3 +55,7 @@ node_modules/
 !Cargo.toml
 !Cargo.lock
 !sqlx-data.json
+!backend/Cargo.toml
+!backend/Cargo.lock
+!backend/libs/**
+!backend/*-service/**
