--- a/backend/feed-service/Dockerfile
+++ b/backend/feed-service/Dockerfile
@@ -11,16 +11,15 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-# Copy workspace files
-COPY Cargo.toml ../
-COPY Cargo.lock ../
-COPY backend/recommendation-service ./recommendation-service
+# Copy workspace files from repo root context
+COPY backend/Cargo.toml backend/Cargo.lock ./
+COPY backend/feed-service ./feed-service
 COPY backend/libs ./libs
 
-WORKDIR /app/recommendation-service
+WORKDIR /app/feed-service
 
-# Build recommendation-service
-RUN cargo build --release
+# Build feed-service
+RUN cargo build --release --package feed-service
 
 FROM debian:bookworm-slim AS runtime
 
@@ -35,7 +34,7 @@ RUN useradd -m -u 1001 -s /bin/bash appuser
 
 WORKDIR /app
 
-COPY --from=builder /app/recommendation-service/target/release/recommendation-service /app/recommendation-service
+COPY --from=builder /app/feed-service/target/release/feed-service /app/feed-service
 
 # Adjust ownership and drop privileges
 RUN chown -R appuser:appuser /app
@@ -51,4 +50,4 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
-CMD ["/app/recommendation-service"]
+CMD ["/app/feed-service"]
