fix(docker): stop copying Cargo.lock to avoid dockerignore conflicts; allow Cargo to resolve deps

--- a/backend/messaging-service/Dockerfile
+++ b/backend/messaging-service/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 # Copy workspace files from repo root
-COPY Cargo.toml Cargo.lock ./
+COPY Cargo.toml ./
 COPY backend/messaging-service ./messaging-service
 COPY backend/libs ./libs
 
