--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -16,6 +16,7 @@ WORKDIR /app
 # Copy workspace files from repo root
 COPY Cargo.toml ./
 COPY backend/auth-service ./backend/auth-service
+COPY backend/protos ./backend/protos
 COPY backend/libs ./backend/libs
 
 # Build auth-service
