--- a/backend/messaging-service/Dockerfile
+++ b/backend/messaging-service/Dockerfile
@@ -17,6 +17,7 @@ WORKDIR /app
 # Copy workspace files from repo root
 COPY Cargo.toml ./
 COPY backend/messaging-service ./backend/messaging-service
+COPY backend/protos ./backend/protos
 COPY backend/libs ./backend/libs
 
 # Build messaging-service
