--- a/backend/user-service/Dockerfile
+++ b/backend/user-service/Dockerfile
@@ -16,6 +16,7 @@ WORKDIR /app
 # Copy workspace files from repo root
 COPY Cargo.toml ./
 COPY backend/user-service ./backend/user-service
+COPY backend/protos ./backend/protos
 COPY backend/libs ./backend/libs
 
 # Build user-service
