--- a/backend/feed-service/Dockerfile
+++ b/backend/feed-service/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update && apt-get install -y \
     ca-certificates \
     cmake \
     build-essential \
+    protobuf-compiler \
     librdkafka-dev \
     && rm -rf /var/lib/apt/lists/*
 
