fix(docker): copy entire backend workspace in builder stage to satisfy workspace members

--- a/backend/feed-service/Dockerfile
+++ b/backend/feed-service/Dockerfile
@@ -14,9 +14,8 @@ WORKDIR /app
 
 # Copy workspace files from repo root
 COPY Cargo.toml ./
-COPY backend/feed-service ./backend/feed-service
-COPY backend/protos ./backend/protos
-COPY backend/libs ./backend/libs
+# Copy full backend workspace to satisfy workspace members
+COPY backend ./backend
 
 WORKDIR /app
 
