--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -15,9 +15,8 @@ WORKDIR /app
 
 # Copy workspace files from repo root
 COPY Cargo.toml ./
-COPY backend/auth-service ./backend/auth-service
-COPY backend/protos ./backend/protos
-COPY backend/libs ./backend/libs
+# Copy full backend workspace to satisfy workspace members
+COPY backend ./backend
 
 # Build auth-service
 RUN cargo build --release --package auth-service
