--- a/backend/content-service/Dockerfile
+++ b/backend/content-service/Dockerfile
@@ -15,9 +15,8 @@ WORKDIR /app
 
 # Copy workspace files from repo root
 COPY Cargo.toml ./
-COPY backend/content-service ./backend/content-service
-COPY backend/protos ./backend/protos
-COPY backend/libs ./backend/libs
+# Copy full backend workspace to satisfy workspace members
+COPY backend ./backend
 
 # Build content-service
 RUN cargo build --release --package content-service
