--- a/backend/media-service/Dockerfile
+++ b/backend/media-service/Dockerfile
@@ -15,9 +15,8 @@ WORKDIR /app
 
 # Copy workspace files from repo root
 COPY Cargo.toml ./
-COPY backend/media-service ./backend/media-service
-COPY backend/protos ./backend/protos
-COPY backend/libs ./backend/libs
+# Copy full backend workspace to satisfy workspace members
+COPY backend ./backend
 
 # Build media-service
 RUN cargo build --release --package media-service
