--- a/backend/messaging-service/Dockerfile
+++ b/backend/messaging-service/Dockerfile
@@ -16,9 +16,8 @@ WORKDIR /app
 
 # Copy workspace files from repo root
 COPY Cargo.toml ./
-COPY backend/messaging-service ./backend/messaging-service
-COPY backend/protos ./backend/protos
-COPY backend/libs ./backend/libs
+# Copy full backend workspace to satisfy workspace members
+COPY backend ./backend
 
 # Build messaging-service
 RUN cargo build --release --package messaging-service
