--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+    "backend/auth-service",
     "backend/user-service",
     "backend/content-service",
     "backend/feed-service",
