fix(docker): copy protos from backend/protos instead of root protos

--- a/backend/media-service/Dockerfile
+++ b/backend/media-service/Dockerfile
@@ -17,8 +17,8 @@ WORKDIR /app
 COPY Cargo.toml ./
 # Copy full backend workspace to satisfy workspace members
 COPY backend ./backend
-# Copy proto definitions
-COPY protos ./protos
+# Copy proto definitions from backend
+COPY backend/protos ./backend/protos
 
 # Build media-service
 RUN cargo build --release --package media-service
