fix(build): compile only main server bin for each service to avoid optional bins causing failures

--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -20,7 +20,7 @@ COPY Cargo.toml ./
 COPY backend ./backend
 
 # Build auth-service
-RUN cargo build --release --package auth-service
+RUN cargo build --release --bin auth-service
 
 # Runtime stage
 FROM debian:bookworm-slim AS runtime
