chore(dockerignore): simplify to avoid excluding source files; include full backend for builds

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,61 +1,6 @@
-# Git
+# Keep docker context simple; exclude only obvious heavy/irrelevant dirs
 .git/
-.gitignore
-.gitattributes
-
-# CI/CD
 .github/
-.gitlab-ci.yml
-.circleci/
-azure-pipelines.yml
-
-# Rust build artifacts
 target/
-*.rlib
-*.rmeta
-*.profraw
-*.profdata
-
-# Logs
-*.log
-logs/
-
-# Environment
-.env*
-!.env.example
-
-# Documentation
-*.md
-docs/
-
-# Test files
-tests/
-*.test
-test_*.rs
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-*.iml
-
-# OS
 .DS_Store
-Thumbs.db
-*.tmp
-
-# Node (if any frontend tools)
 node_modules/
-*.lock
-!backend/Cargo.lock
-
-# Root level configs (keep for build)
-!Cargo.toml
-!Cargo.lock
-!sqlx-data.json
-!backend/Cargo.toml
-!backend/Cargo.lock
-!backend/libs/**
-!backend/*-service/**
