--- a/backend/user-service/Dockerfile
+++ b/backend/user-service/Dockerfile
@@ -18,6 +18,8 @@ WORKDIR /app
 COPY Cargo.toml ./
 # Copy full backend workspace to satisfy workspace members
 COPY backend ./backend
+# Copy proto definitions from backend
+COPY backend/protos ./backend/protos
 
 # Build user-service
 RUN cargo build --release --bin user-service
