fix(build): compile only main server bin per service (cargo build -p <pkg> --bin <bin>) to avoid optional bin failures

--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -22,7 +22,7 @@ COPY backend ./backend
 COPY backend/protos ./backend/protos
 
 # Build auth-service
-RUN cargo build --release -p auth-service
+RUN cargo build --release -p auth-service --bin auth-service
 
 # Runtime stage
 FROM debian:bookworm-slim AS runtime
