--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -57,18 +57,8 @@ jobs:
             echo "✅ AWS_ROLE_ARN configured"
           fi
 
-      - id: detect
-        name: Detect AWS availability
-        run: |
-          if [ -n "${{ secrets.AWS_ROLE_ARN }}" ]; then
-            echo "has_aws=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "has_aws=false" >> "$GITHUB_OUTPUT"
-          fi
-
       - name: Configure AWS credentials
         id: aws-creds
-        if: ${{ env.AWS_ROLE_ARN != '' }}
         continue-on-error: true
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -82,6 +72,15 @@ jobs:
         if: ${{ steps.aws-creds.outcome == 'success' }}
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
+
+      - id: detect
+        name: Detect AWS availability
+        run: |
+          if [ "${{ steps.aws-creds.outcome }}" = "success" ]; then
+            echo "has_aws=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "has_aws=false" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
