--- a/.github/workflows/ecr-build-push.yml
+++ b/.github/workflows/ecr-build-push.yml
@@ -47,8 +47,12 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-to-assume: arn:aws:iam::025434362120:role/github-actions-role
+          source-account-id: '025434362120'
           aws-region: ${{ env.AWS_REGION }}
+          audience: sts.amazonaws.com
+          role-session-name: gha-ecr-${{ github.run_id }}
+          role-skip-session-tagging: true
 
       - name: Verify AWS credentials
         run: |
@@ -106,8 +110,12 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-to-assume: arn:aws:iam::025434362120:role/github-actions-role
+          source-account-id: '025434362120'
           aws-region: ${{ env.AWS_REGION }}
+          audience: sts.amazonaws.com
+          role-session-name: gha-ecr-verify-${{ github.run_id }}
+          role-skip-session-tagging: true
 
       - name: Verify all images in ECR
         run: |
