--- a/.github/workflows/simple-ecr-build.yml
+++ b/.github/workflows/simple-ecr-build.yml
@@ -46,9 +46,12 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-to-assume: arn:aws:iam::025434362120:role/github-actions-role
+          source-account-id: '025434362120'
           aws-region: ${{ env.AWS_REGION }}
-          debug: true  # 调试模式
+          audience: sts.amazonaws.com
+          role-session-name: gha-simple-ecr-${{ github.run_id }}
+          role-skip-session-tagging: true
 
       - name: Verify AWS access
         run: |
