--- a/.github/workflows/ecr-build-push.yml
+++ b/.github/workflows/ecr-build-push.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./backend
+          context: .
           file: ./backend/${{ matrix.service }}/Dockerfile
           platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
