--- a/.github/workflows/simple-ecr-build.yml
+++ b/.github/workflows/simple-ecr-build.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Build and push ${{ matrix.service }}
         uses: docker/build-push-action@v5
         with:
-          context: ./backend
+          context: .
           file: ./backend/${{ matrix.service }}/Dockerfile
           platforms: linux/amd64
           push: true
