fix(docker): 解决双重workspace冲突和Docker构建问题
- 删除backend/Cargo.toml避免workspace冲突
- 修改所有8个服务的cargo build命令，移除-p参数
- 在所有runtime镜像中添加librdkafka1依赖
- media-service builder阶段添加librdkafka-dev

修复的服务:
- auth-service
- user-service
- content-service
- feed-service
- media-service
- messaging-service
- search-service
- streaming-service

--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -22,7 +22,7 @@ COPY backend ./backend
 COPY backend/protos ./backend/protos
 
 # Build auth-service
-RUN cargo build --release -p auth-service --bin auth-service
+RUN cargo build --release --bin auth-service
 
 # Runtime stage
 FROM debian:bookworm-slim AS runtime
@@ -30,6 +30,7 @@ FROM debian:bookworm-slim AS runtime
 RUN apt-get update && apt-get install -y \
     ca-certificates \
     libssl3 \
+    librdkafka1 \
     && rm -rf /var/lib/apt/lists/*
 
 # Create non-root user
