--- a/backend/search-service/Dockerfile
+++ b/backend/search-service/Dockerfile
@@ -19,10 +19,10 @@ COPY backend ./backend
 # Copy proto definitions from backend
 COPY backend/protos ./backend/protos
 
-RUN cargo build --release -p search-service --bin search-service
+RUN cargo build --release --bin search-service
 
 FROM debian:bookworm-slim AS runtime
-RUN apt-get update && apt-get install -y ca-certificates libssl3 && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y ca-certificates libssl3 librdkafka1 && rm -rf /var/lib/apt/lists/*
 
 # Create non-root user and group
 RUN useradd -m -u 1001 -s /bin/bash appuser
