--- a/backend/media-service/Dockerfile
+++ b/backend/media-service/Dockerfile
@@ -22,7 +22,7 @@ COPY backend ./backend
 COPY backend/protos ./backend/protos
 
 # Build media-service
-RUN cargo build --release --bin media-service
+RUN cargo build --release -p media-service --bin media-service
 
 # Runtime stage
 FROM debian:bookworm-slim AS runtime
