--- a/backend/search-service/Cargo.toml
+++ b/backend/search-service/Cargo.toml
@@ -3,6 +3,10 @@ name = "search-service"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "search-service"
+path = "src/main.rs"
+
 [dependencies]
 # Web framework
 axum = { version = "0.8", features = ["macros"] }
