fix(build): add Cargo.lock for reproducible builds
- Uncomment Cargo.lock in .gitignore (Rust best practice)
- Force-add Cargo.lock to repository
- Fixes CI/CD error: '/Cargo.lock': not found

Resolves Docker build failures in all 8 services.

--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,8 @@
 .vscode/
 /.github-runner/
 /target/
-Cargo.lock
+# Cargo.lock - Include for reproducible builds (Rust best practice for applications)
+# Cargo.lock
 Thumbs.db
 bin/
 build/
